--- a/data/en/banner.yml
+++ b/data/en/banner.yml
@@ -4,8 +4,10 @@ banner:
   bg_image_webp : "images/backgrounds/hero-area.webp"
   bg_image : "images/backgrounds/hero-area.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
-  title : "Experience the new reality"
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!"
+  title : "DevOps as a Service"
+  content : "To Streamline Workflows and Improve Scability\n<br><br>
+  Tie up your software development and IT operations with cloud-based DevOps automation to reach
+the ultimate performance and perfect in-house workflows"
   button:
     enable : true
     label : "Explore Us"
